gitops/apps/langy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langy
spec:
  type: ClusterIP
  selector:
    app: langy
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
