gitops/apps/langy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langy-simon-frey-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: simon-frey-com-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - langy.simon-frey.com
      secretName: langy-simon-frey-com-tls
  rules:
    - host: langy.simon-frey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langy
                port:
                  number: 8080
